# Concept_Sherpa_V2

./: .env.example  .gitignore  CLAUDE.MD  CLAUDE.md  accurate_page_finder.py  chapter1_section_splitter.py  chapter_extractor.py  chapter_page_mappings.md  content_processor.py  create_embeddings.py  create_embeddings_v2.py  create_v4_with_leaves.py  demo_chat.py  embedding_service_v2.py  final_content_extractor.py  final_save_all.py  find_missing_sections.py  leaf_content_extractor.py  neon_vector_db.py  openai_section_processor.py  pyproject.toml  query_neon.py  section_1_1_analysis.md  section_content_extractor.py  step1_extract_content.py  step1_extract_remaining.py  step2_save_to_files.py  test_pdf_extraction.py  toc_with_pages.json  vector_db_v2.py  verify_results.py  verify_section_page.py
25-07-29/: README.md  extract_session_qa.py  knowledge_qa.py  qa_sessions.md  save_qa_session.py  search_neon.py  test_system.md
25-08-07/: PDF_목차.md  PDF_목차_v2.md  PDF_목차_v3.md  chapter1_extracted.md  chapter1_leaf_extractor.py  chapter1_toc_analyzer.py  claude_sdk_test.py  claude_toc_enhancer.py  core_toc_with_page_ranges_v2.json  core_toc_with_page_ranges_v3.json  enhanced_toc_with_relationships.json  extract_chapter1.py  extract_clean_toc.py  final_toc_enhancer.py  focused_toc_test.py  introduction_analysis_report.md  part2_leaf_extractor.py  part2_leaf_extractor_v2.py  pdf_part_extractor.py  pdf_toc_extractor.py  precise_chapter1_analyzer.py  simple_test.py  simple_toc_analyzer.py  toc_content_gaps.json  toc_gap_analyzer.py  toc_gap_analyzer_v2.py  toc_with_page_ranges.json  (+8 more)
(+1664 files in other folders)
