[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "claude-code-sdk>=0.0.16",
    "anyio>=4.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "psycopg2-binary>=2.9.10",
    "openai>=1.99.6",
    "python-dotenv>=1.1.1",
    "psutil>=7.0.0",
    "beautifulsoup4>=4.13.4",
]
